--- a/register.html
+++ b/register.html
@@ -40,22 +40,22 @@
                       <div class="row">
                         <div class="form-outline mb-4 col-sm-6">
                           <label class="form-label" for="fname">Nama Depan</label>
-                          <input type="text" id="fname" class="form-control form-control-lg" />
+                          <input type="text" id="fname" class="form-control form-control-lg" placeholder="Nama Depan"/>
                         </div>
                         <div class="form-outline mb-4 col-sm-6">
                           <label class="form-label" for="bname">Nama Belakang</label>
-                          <input type="text" id="bname" class="form-control form-control-lg" />
+                          <input type="text" id="bname" class="form-control form-control-lg" placeholder="Belakang"/>
                         </div>
                       </div>
                       
                       <div class="form-outline mb-4">
                         <label class="form-label" for="email">Email address</label>
-                        <input type="email" id="email" class="form-control form-control-lg" />
+                        <input type="email" id="email" class="form-control form-control-lg" placeholder="Alamat Email" />
                       </div>
     
                       <div class="form-outline mb-4">
                         <label class="form-label" for="password">Password</label>
-                        <input type="password" id="password" class="form-control form-control-lg" />
+                        <input type="password" id="password" class="form-control form-control-lg" placeholder="Password"/>
                       </div>
                       <div class="row">
                         <div class="form-outline mb-4 col-sm-6">
@@ -69,12 +69,12 @@
                         </div>
                         <div class="form-outline mb-4 col-sm-6">
                           <label class="form-label" for="kota">Kota</label>
-                          <input type="text" id="kota" class="form-control form-control-lg" />
+                          <input type="text" id="kota" class="form-control form-control-lg" placeholder="Asal Kota"/>
                         </div>
                       </div>
                       <div class="form-outline mb-4">
                         <label class="form-label" for="kota">Alamat</label>
-                        <input type="text" id="alamat" class="form-control form-control-lg" />
+                        <input type="text" id="alamat" class="form-control form-control-lg" placeholder="Alamat"/>
                       </div>
                       <div class="pt-1 mb-4">
                         <button class="btn btn-dark btn-lg btn-block" type="button">Daftar</button>
