--- a/register.html
+++ b/register.html
@@ -21,8 +21,7 @@
 				<div class="card" style="border-radius: 1rem;">
 					<div class="row g-0">
 						<div class="col-md-6 col-lg-5 d-none d-md-block">
-							<img src="assets/img/loginpict.png" alt="login form" class="img-fluid"
-								style="margin-top:200px" />
+							<img src="assets/img/loginpict.png" alt="login form" class="img-fluid" style="margin-top:200px" />
 						</div>
 						<div class="col-md-6 col-lg-7 d-flex align-items-center">
 							<div class="card-body p-4 p-lg-5 text-black">
