--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-	<section class="w-100 h-100" style="background-color:#F9A826;"">
+	<section class="w-100 h-100" style="background-color:#F9A826;">
       <div class=" container py-5 h-100">
 		<div class="row d-flex justify-content-center align-items-center h-100">
 			<div class="col col-xl-10">
