--- a/about.html
+++ b/about.html
@@ -4,17 +4,16 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="assets/css/bootstrap-icons.css">
 	<link rel="stylesheet" href="assets/css/bootstrap.css" type="text/css" />
 	<script src="components/bootstrap.bundle.js"></script>
-	<title>ABOUT | LOSTANDFOUND</title>
+	<title>About | LOSTANDFOUND</title>
 </head>
 <body>
-    <!-- Main -->
-    <section class="w-100 h-100" style="background-color:#F9A826;">
-        <div class="container">
-            <p></p>
+    <div class="w-100 h-100" style="background-color:#F9A826;">
+        <div class="align-items-center">
+            <h2 class="h2">Butuh bantuan..?</h2>
         </div>
-    </section>
+    </div>
 </body>
 </html>
