--- a/home.html
+++ b/home.html
@@ -7,15 +7,33 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/navs/global.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/globalstyle.css" rel="stylesheet" type="text/css" />
     <!-- Latest compiled JavaScript -->
     <script src="components/bootstrap.bundle.js"></script>
     <title>Home | Lost&Found</title>
 </head>
 <body>
     <!--NAVBAR-->
-    <div>
-
-    </div>
+    <header>
+      <div class="logo">
+        <img src="assets/img/lostlogo.png" class="logo"alt="logo"/>
+      </div>
+      <div class="hamburger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
+      <nav class="nav-bar">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">Cari barang</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Login</a></li>
+          <li><a href="">Register</a></li>
+        </ul>
+      </nav>
+    </header>
     <!--MAIN CONTAINER-->
     
     <!--FOOTER-->
