--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 	<title>About | LOSTANDFOUND</title>
 </head>
 <body>
-    <div class="w-100 h-100" style="background-color:#F9A826;">
+    <div class="vh-100" style="background-color:#F9A826;">
         <div class="align-items-center">
             <h2 class="h2">Butuh bantuan..?</h2>
         </div>
