--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="assets/css/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/navs/global.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/globalstyle.css" rel="stylesheet" type="text/css" />
@@ -28,7 +28,7 @@
       </div>
       <nav class="nav-bar">
         <ul>
-          <li><a href="">Home</a></li>
+          <li><a href="" class="active">Home</a></li>
           <li><a href="">Cari barang</a></li>
           <li><a href="">About</a></li>
           <li><a href="">Login</a></li>
@@ -36,6 +36,7 @@
         </ul>
       </nav>
     </header>
+    <script src="components/navbar.js"></script>
     <!--MAIN CONTAINER-->
 
     <!--FOOTER-->
