--- a/register.html
+++ b/register.html
@@ -5,14 +5,14 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link href="assets/css/bootstrap-icons.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 	<link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css" />
 	<script src="components/bootstrap.bundle.js"></script>
 	<title>Register | LOSTANDFOUND</title>
 </head>
 
 <body>
-	<section class="w-100 h-100" style="background-color:#F9A826;">
+	<section class="vh-100" style="background-color:#F9A826;">
 		<div class=" container py-5 h-100">
 			<div class="row d-flex justify-content-center align-items-center h-100">
 				<div class="col col-xl-10">
