--- a/home.html
+++ b/home.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Latest compiled and minified CSS -->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/navs/global.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/navs/navbar_global.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/globalstyle.css" rel="stylesheet" type="text/css" />
-    <!-- Latest compiled JavaScript -->
     <script src="components/bootstrap.bundle.js"></script>
     <title>Home | Lost&Found</title>
 </head>
@@ -28,11 +27,12 @@
       </div>
       <nav class="nav-bar">
         <ul>
-          <li><a href="" class="active">Home</a></li>
-          <li><a href="">Cari barang</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Login</a></li>
-          <li><a href="">Register</a></li>
+          <li><a href="" class="active">HOME</a></li>
+          <li><a href="" class="active">TEMUKAN BARANG</a></li>
+          <li><a href="" class="active">TENTANG KAMI</a></li>
+          <li><a href="" class="active">HUBUNGI KAMI</a></li>
+          <li><a href="login.html" class="masuk">MASUK</a></li>
+          <li><a href="register.html" class="register">DAFTAR</a></li>
         </ul>
       </nav>
     </header>
