--- a/about.html
+++ b/about.html
@@ -5,9 +5,12 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="assets/css/bootstrap-icons.css">
-	<link rel="stylesheet" href="assets/css/bootstrap.css" type="text/css" />
-	<link rel="stylesheet" href="style.css">
+	<link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
+	<link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css" />
+	<link href="assets/css/navs/navbar_global.css" rel="stylesheet" type="text/css" />
+	<link href="assets/css/globalstyle.css" rel="stylesheet" type="text/css" />
+	<link href="assets/css/home.css" rel="stylesheet" type="text/css" />
 	<script src="components/bootstrap.bundle.js"></script>
 	<title>About | LOSTANDFOUND</title>
 </head>
@@ -36,6 +39,24 @@
 	</header>
 	<script src="components/navbar.js"></script>
 	<script src="components/navbar-sticky.js"></script>
+
+	<!-- Main Conten -->
+	<div class="color-carousel">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 text-mckup">
+					<div class="mt-8">
+						<h2 class="mt-5" style="font-weight: 900; text-align: center;">BUTUH <span style="color: white;">BANTUAN..?</span></h2>
+					</div>
+
+					<!-- Search Box -->
+					<div class="mt-3">
+						<!--  -->
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 
 </html>
