tambahkan hal baru

--- a/home.html
+++ b/home.html
@@ -98,7 +98,21 @@
         </div>
       </div>
     </div>
-    <div class=""></div>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-sm-6">
+          <img src="assets/img/mockup.png" class="mckup" alt="contoh"/>
+        </div>
+        <div class="col-sm-6 text-mckup">
+          <h2 style="font-weight: 900;">LOST AND <span class="head-color">FOUND</span></h2>
+          <P class="paraf">Mau cari barang hilang jadi semudah lewat sentuhan jari. Lewat Lost and Found, kamu bisa melakukan pencarian barang hilang atau melaporkan barang hilang apapun
+            dengan mudah. <span class="paraf-color">#MulaiKebaikan</span> bersama kami untuk menolong lebih banyak orang. 
+          </P>
+          <button class="button-more">Temukan Barangmu</button>
+        </div>
+    </div>
+
+  </div>
 
     <!--FOOTER-->
   </body>
