--- a/about.html
+++ b/about.html
@@ -1,19 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="assets/css/bootstrap-icons.css">
 	<link rel="stylesheet" href="assets/css/bootstrap.css" type="text/css" />
+	<link rel="stylesheet" href="style.css">
 	<script src="components/bootstrap.bundle.js"></script>
 	<title>About | LOSTANDFOUND</title>
 </head>
+
 <body>
-    <div class="vh-100" style="background-color:#F9A826;">
-        <div class="align-items-center">
-            <h2 class="h2">Butuh bantuan..?</h2>
-        </div>
-    </div>
+	<!-- Navbar -->
+	<header>
+		<div class="logo">
+			<img src="assets/img/lostlogo.png" class="logo" alt="logo" />
+		</div>
+		<div class="hamburger">
+			<div class="line"></div>
+			<div class="line"></div>
+			<div class="line"></div>
+		</div>
+		<nav class="nav-bar">
+			<ul>
+				<li><a href="home.html" class="active">HOME</a></li>
+				<li><a href="" class="active">TEMUKAN BARANG</a></li>
+				<li><a href="about.html" class="active">TENTANG KAMI</a></li>
+				<li><a href="" class="active">HUBUNGI KAMI</a></li>
+				<li><a href="login.html" class="masuk">MASUK</a></li>
+				<li><a href="register.html" class="register">DAFTAR</a></li>
+			</ul>
+		</nav>
+	</header>
+	<script src="components/navbar.js"></script>
+	<script src="components/navbar-sticky.js"></script>
 </body>
+
 </html>
