--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 	<!-- Navbar -->
 	<header>
 		<div class="logo">
-			<img src="assets/img/lostlogo.png" class="logo" alt="logo" />
+			<img src="assets/img/lostlogo.png" class="logo" alt="logo"/>
 		</div>
 		<div class="hamburger">
 			<div class="line"></div>
@@ -50,8 +50,17 @@
 					</div>
 
 					<!-- Search Box -->
-					<div class="mt-3">
-						<!--  -->
+					<div class="mt-5">
+						<div class="row">
+							<!-- 1'st Col -->
+							<div class="col-sm-4">
+								<div>
+									<img src="" alt="">
+								</div>
+							</div>
+							<div class="col-sm-4">.col-sm-3</div>
+							<div class="col-sm-4">.col-sm-3</div>
+						</div>
 					</div>
 				</div>
 			</div>
