--- a/home.html
+++ b/home.html
@@ -48,6 +48,7 @@
 
     <!--MAIN CONTAINER-->
     <div class="color-carousel">
+      <!--CONTAINER ke 1-->
       <div class="container section">
         <!-- Carousel -->
         <div id="demo" class="carousel slide" data-bs-ride="carousel">
@@ -98,22 +99,36 @@
         </div>
       </div>
     </div>
+
+    <!--CONTAINER ke 2-->
     <div class="container mt-5">
       <div class="row">
         <div class="col-sm-6">
-          <img src="assets/img/mockup.png" class="mckup" alt="contoh"/>
+          <img src="assets/img/mockup-ae.png" class="mckup" alt="contoh" />
         </div>
         <div class="col-sm-6 text-mckup">
-          <h2 style="font-weight: 900;">LOST AND <span class="head-color">FOUND</span></h2>
-          <P class="paraf">Mau cari barang hilang jadi semudah lewat sentuhan jari. Lewat Lost and Found, kamu bisa melakukan pencarian barang hilang atau melaporkan barang hilang apapun
-            dengan mudah. <span class="paraf-color">#MulaiKebaikan</span> bersama kami untuk menolong lebih banyak orang. 
-          </P>
-          <button class="button-more">Temukan Barangmu</button>
+          <h2 style="font-weight: 900">
+            LOST AND <span class="head-color">FOUND</span>
+          </h2>
+          <p class="paraf">
+            Mau cari barang hilang jadi semudah lewat sentuhan jari. Lewat Lost
+            and Found, kamu bisa melakukan pencarian barang hilang atau
+            melaporkan barang hilang apapun dengan mudah.
+            <span class="paraf-color">#MulaiKebaikan</span> bersama kami untuk
+            menolong lebih banyak orang.
+          </p>
+          <button class="button-more">
+            Temukan Barangmu<i class="bi bi-caret-right-fill"></i>
+          </button>
         </div>
+      </div>
     </div>
-
-  </div>
-
+    <!--CONTAINER ke 3-->
+    <div>
+      <div>
+        
+      </div>
+    </div>
     <!--FOOTER-->
   </body>
 </html>
