--- a/home.html
+++ b/home.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"/>
-    <link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css"/>
-    <link href="assets/css/navs/navbar_global.css" rel="stylesheet"
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
+    <link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css" />
+    <link
+      href="assets/css/navs/navbar_global.css"
+      rel="stylesheet"
       type="text/css"
     />
     <link href="assets/css/globalstyle.css" rel="stylesheet" type="text/css" />
@@ -96,7 +101,7 @@
     </div>
 
     <!--CONTAINER ke 2-->
-    <div class="container mt-5">
+    <div class="container mt-5 mb-5">
       <div class="row">
         <div class="col-sm-6">
           <img src="assets/img/mockup-ae.png" class="mckup" alt="contoh" />
@@ -119,9 +124,22 @@
       </div>
     </div>
     <!--CONTAINER ke 3-->
-    <div>
-      <div>
-        
+    <div class="d-block">
+      <div class="container mb-5">
+        <h2 class="title text-center title-m mb-3">
+          Menemukan Barang Dengan Lost & Found
+        </h2>
+        <div class="row mt-5">
+          <div class="col-sm-4">
+            <p>Kemudahan untuk transaksi, kirim uang, pembelian pulsa, bayar tagihan dan transaksi e-commerce </p>
+          </div>
+          <div class="col-sm-4">
+            <p>Kemudahan untuk transaksi, kirim uang, pembelian pulsa, bayar tagihan dan transaksi e-commerce </p>
+          </div>
+          <div class="col-sm-4">
+            <p>Kemudahan untuk transaksi, kirim uang, pembelian pulsa, bayar tagihan dan transaksi e-commerce </p>
+          </div>
+        </div>
       </div>
     </div>
     <!--FOOTER-->
