--- a/about.html
+++ b/about.html
@@ -50,16 +50,24 @@
 					</div>
 
 					<!-- Search Box -->
-					<div class="mt-5">
+					<div class="mt-5 container">
 						<div class="row">
 							<!-- 1'st Col -->
-							<div class="col-sm-4">
+							<div class="col-sm-4 container">
 								<div>
-									<img src="" alt="">
+									<img src="assets/img/about/faq.png" alt="FAQ" width="300px" style="float: right;" class="pt-4">
 								</div>
 							</div>
-							<div class="col-sm-4">.col-sm-3</div>
-							<div class="col-sm-4">.col-sm-3</div>
+							<div class="col-sm-4">
+								<div>
+									<img src="assets/img/about/bantuan.png" alt="HELP" width="300px" style="overflow: auto; margin-left: 15%; margin-right: 15%;" class="pt-4">
+								</div>
+							</div>
+							<div class="col-sm-4">
+								<div>
+									<img src="assets/img/about/ask-2.png" alt="ASK" width="350px" style="float: left;" class="mb-2">
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
