--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 	<!-- Navbar -->
 	<header>
 		<div class="logo">
-			<img src="assets/img/lostlogo.png" class="logo" alt="logo"/>
+			<a href="home.html"><img src="assets/img/lostlogo.png" class="logo" alt="logo"/></a>
 		</div>
 		<div class="hamburger">
 			<div class="line"></div>
