--- a/home.html
+++ b/home.html
@@ -15,6 +15,11 @@
       rel="stylesheet"
       type="text/css"
     />
+    <link
+      href="assets/css/footer/footer.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <link href="assets/css/globalstyle.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/home.css" rel="stylesheet" type="text/css" />
     <script src="components/bootstrap.bundle.js"></script>
@@ -25,7 +30,9 @@
     <!--NAVBAR-->
     <header>
       <div class="logo">
-        <img src="assets/img/lostlogo.png" class="logo" alt="logo" />
+        <a href="home.html"
+          ><img src="assets/img/lostlogo.png" class="logo" alt="logo"
+        /></a>
       </div>
       <div class="hamburger">
         <div class="line"></div>
@@ -77,21 +84,21 @@
             <div class="carousel-item active">
               <img
                 src="assets/img/carousel1.png"
-                alt="Los Angeles"
+                alt="carousel1"
                 class="d-block w-100"
               />
             </div>
             <div class="carousel-item">
               <img
                 src="assets/img/carousel2.png"
-                alt="Chicago"
+                alt="carousel2"
                 class="d-block w-100"
               />
             </div>
             <div class="carousel-item">
               <img
                 src="assets/img/carousel3.png"
-                alt="New York"
+                alt="carousel3"
                 class="d-block w-100"
               />
             </div>
@@ -101,7 +108,7 @@
     </div>
 
     <!--CONTAINER ke 2-->
-    <div class="container mt-5 mb-5">
+    <div class="container mt-5 container-m">
       <div class="row">
         <div class="col-sm-6">
           <img src="assets/img/mockup-ae.png" class="mckup" alt="contoh" />
@@ -117,31 +124,142 @@
             <span class="paraf-color">#MulaiKebaikan</span> bersama kami untuk
             menolong lebih banyak orang.
           </p>
-          <button class="button-more">
-            Temukan Barangmu<i class="bi bi-caret-right-fill"></i>
-          </button>
+          <button class="button-more">Temukan Barangmu</button>
         </div>
       </div>
     </div>
     <!--CONTAINER ke 3-->
-    <div class="d-block">
-      <div class="container mb-5">
-        <h2 class="title text-center title-m mb-3">
+    <div class="d-block container-m" style="background-color: #fafafa">
+      <div class="container">
+        <h2 class="title text-center title-m">
           Menemukan Barang Dengan Lost & Found
         </h2>
-        <div class="row mt-5">
+        <div class="row roww-m">
           <div class="col-sm-4">
-            <p>Kemudahan untuk transaksi, kirim uang, pembelian pulsa, bayar tagihan dan transaksi e-commerce </p>
+            <img src="assets/img/security.png" class="row-img" alt="security" />
+            <p class="desc-name">Keamanan Terjamin</p>
+            <p class="desc-paraf">
+              Temukan barang dan titipkan di LOST AND FOUND, barang akan aman
+              pada kami sampai ketangan pemilik.
+            </p>
           </div>
           <div class="col-sm-4">
-            <p>Kemudahan untuk transaksi, kirim uang, pembelian pulsa, bayar tagihan dan transaksi e-commerce </p>
+            <img src="assets/img/support.png" class="row-img" alt="security" />
+            <p class="desc-name">Bantuan Non-stop</p>
+            <p class="desc-paraf">
+              Bantuan Non-stop memungkin kan anda untuk menghubungi kami, dan
+              konfirmasi ketersediaan barang.
+            </p>
           </div>
           <div class="col-sm-4">
-            <p>Kemudahan untuk transaksi, kirim uang, pembelian pulsa, bayar tagihan dan transaksi e-commerce </p>
+            <img src="assets/img/location.png" class="row-img" alt="security" />
+            <p class="desc-name">Kemudahan Pencarian</p>
+            <p class="desc-paraf">
+              Kemudahan untuk pencarian, terdapat peta penitipan barang hilang
+              yang memudahkan anda menemukan dimana barang hilang.
+            </p>
           </div>
         </div>
       </div>
     </div>
+    <!--CONTAINER ke 4-->
+    <div class="container-m d-block">
+      <div class="container">
+        <h2 class="title text-center title-m">Mulai Pakai Lost & Found</h2>
+        <div class="row">
+          <div class="col-sm-6 text-mckup first">
+            <h2 style="font-weight: 900">
+              Pakai LOST AND <span class="head-color">FOUND</span> untuk Mencari
+              Barang Lebih Mudah
+            </h2>
+            <ul class="order-list">
+              <li class="checklist">
+                Dapatkan barang hilang anda dengan mudah hanya melalui perangkat
+                anda.
+              </li>
+              <li class="checklist">
+                Memiliki outlet penitipan barang yang menjamin keaman barang
+                yang hilang.
+              </li>
+              <li class="checklist">
+                Anda dapat menitipkan barang yang ditemukan dan dapatkan reward,
+                dari hasil kebaikan anda.
+              </li>
+              <li class="checklist">
+                Hubungi kami, apakah barang anda yang hilang terdapat pada kami,
+                anda akan kami informasikan apabila seseorang menemukan barang
+                anda.
+              </li>
+            </ul>
+            <button class="button-more">Mulai Sekarang</button>
+          </div>
+          <div class="col-sm-6 second">
+            <img src="assets/img/start.png" class="mckup" alt="contoh" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--CONTAINER ke 5-->
+    <div class="d-block container-m" style="background-color: #fafafa">
+      <div class="container">
+        <h2 class="title text-center title-m">
+          Jalani Hidup penuh makna dengan saling membantu
+        </h2>
+        <p class="p-5" style="text-align: center; font-size: large">
+          Jalani Hidup penuh makna dengan saling membantu, kehilangan barang
+          yang jatuh seperti dompet, handphone, dan hal yang lain merupakan hal
+          yang sangat mengecewakan. <br /><br />
+          Membantu seseorang merupakan hal yang luar biasa, selain orang lain
+          terbantu kita merasa bahwa itu suatu hal yang baik. LOST AND FOUND
+          hadir untuk membantumu melakukan hal-hal baik lebih banyak.
+          <br /><br />
+          Titipkan barang yang anda temukan, LOST AND FOUND adalah aplikasi yang
+          membantumu berbuat kebaikan, dan mencari barangmu yang hilang, agar
+          kamu tidak perlu bersusah payah untuk mencari barangmu yang jatuh ntah
+          dimana.
+        </p>
+        <h1
+          style="
+            margin-top: 2rem;
+            padding-top: 2rem;
+            text-align: center;
+            font-weight: 700;
+          "
+        >
+          #LOSTAND<span class="head-color">FOUND</span> UNTUK KEBAIKAN
+        </h1>
+      </div>
+    </div>
     <!--FOOTER-->
+    <footer class="container-footer">
+      <div class="page-one">
+          <div class="box">
+              <figure>
+                  <a href="#">
+                      <img src="assets/img/footer-logo.png" alt="Lost and found">
+                  </a>
+              </figure>
+          </div>
+          <div class="box">
+            <div class="box-center">
+              <a class="">Temukan Barang</a>
+              <a class="">Tentang kami</a>
+              <a class="">Hubungi kami</a>
+            </div>
+          </div>
+          <div class="box">
+              <h2>Ikuti Kami</h2>
+              <div class="social-media">
+                <i class="bi bi-facebook"></i>
+                <i class="bi bi-instagram"></i>
+                <i class="bi bi-twitter"></i>
+                <i class="bi bi-youtube"></i>
+              </div>
+          </div>
+      </div>
+      <div class="page-two">
+          <small>&copy; 2022 <b>LOST AND FOUND</b> - PT. Kerja Kelompok Sukses</small>
+      </div>
+  </footer>
   </body>
 </html>
