--- a/help.html
+++ b/help.html
@@ -11,7 +11,6 @@
 	<link href="assets/css/navs/navbar_global.css" rel="stylesheet" type="text/css" />
 	<link href="assets/css/globalstyle.css" rel="stylesheet" type="text/css" />
 	<link href="assets/css/home.css" rel="stylesheet" type="text/css" />
-	<link rel="stylesheet" href="assets/css/accordions.css">
 	<script src="components/bootstrap.bundle.js"></script>
 	<title>About | LOSTANDFOUND</title>
 </head>
@@ -20,7 +19,7 @@
 	<!-- Navbar -->
 	<header>
 		<div class="logo">
-			<a href="home.html"><img src="assets/img/lostlogo.png" class="logo" alt="logo"/></a>
+			<a href="home.html"><img src="assets/img/lostlogo.png" class="logo" alt="logo" /></a>
 		</div>
 		<div class="hamburger">
 			<div class="line"></div>
@@ -56,19 +55,22 @@
 							<div class="col-sm-4 container mt-4">
 								<a href="#" style="text-decoration: none;">
 									<img src="assets/img/about/faq.png" alt="" width="300px" class="mx-auto d-block">
-									<h2 class="mt-1" style="font-weight: 900; text-align: center; color: #7004d4;">FAQ</h2>
+									<h2 class="mt-1" style="font-weight: 900; text-align: center; color: #7004d4;">FAQ
+									</h2>
 								</a>
 							</div>
 							<div class="col-sm-4 container mt-4">
 								<a href="#" style="text-decoration: none;">
 									<img src="assets/img/about/bantuan.png" alt="" width="300px" class="mx-auto d-block">
-									<h2 class="mt-1" style="font-weight: 900; text-align: center; color: #7004d4;">HELP</h2>
+									<h2 class="mt-1" style="font-weight: 900; text-align: center; color: #7004d4;">HELP
+									</h2>
 								</a>
 							</div>
 							<div class="col-sm-4 container mt-4">
 								<a href="#" style="text-decoration: none;">
 									<img src="assets/img/about/ask-2.png" alt="" width="300px" class="mx-auto d-block">
-									<h2 class="mt-1" style="font-weight: 900; text-align: center; color: #7004d4;">ASK</h2>
+									<h2 class="mt-1" style="font-weight: 900; text-align: center; color: #7004d4;">ASK
+									</h2>
 								</a>
 							</div>
 						</div>
@@ -79,141 +81,7 @@
 	</div>
 
 	<!-- Accordions -->
-	<div>
-		<section class="accordion_two_section ptb-100">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-6 accordionTwo">
-						<div class="panel-group" id="accordionTwoLeft">
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									<h4 class="panel-title">
-										<a data-toggle="collapse" data-parent="#accordionTwoLeft" href="#collapseTwoLeftone"
-											aria-expanded="false" class="collapsed">
-											For what reason would it be advisable
-										</a>
-									</h4>
-								</div>
-								<div id="collapseTwoLeftone" class="panel-collapse collapse" aria-expanded="false"
-									role="tablist" style="height: 0px;">
-									<div class="panel-body">
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus hendrerit risus
-										nisl, nec facilisis ante iaculis fringilla. Integer mattis risus vel dapibus
-										rhoncus. Duis ut nulla et metus vehicula facilisis non eu quam.
-									</div>
-								</div>
-							</div>
-							<!-- /.panel-default -->
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									<h4 class="panel-title">
-										<a class="collapsed" data-toggle="collapse" data-parent="#accordionTwoLeft"
-											href="#collapseTwoLeftTwo" aria-expanded="false">
-											for me to think about business content?
-										</a>
-									</h4>
-								</div>
-								<div id="collapseTwoLeftTwo" class="panel-collapse collapse" aria-expanded="false"
-									role="tablist">
-									<div class="panel-body">
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus hendrerit risus
-										nisl, nec facilisis ante iaculis fringilla. Integer mattis risus vel dapibus
-										rhoncus. Duis ut nulla et metus vehicula facilisis non eu quam.
-									</div>
-								</div>
-							</div>
-							<!-- /.panel-default -->
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									<h4 class="panel-title">
-										<a class="collapsed" data-toggle="collapse" data-parent="#accordionTwoLeft"
-											href="#collapseTwoLeftThree" aria-expanded="false">
-											it be advisable
-										</a>
-									</h4>
-								</div>
-								<div id="collapseTwoLeftThree" class="panel-collapse collapse" aria-expanded="false"
-									role="tablist">
-									<div class="panel-body">
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus hendrerit risus
-										nisl, nec facilisis ante iaculis fringilla. Integer mattis risus vel dapibus
-										rhoncus. Duis ut nulla et metus vehicula facilisis non eu quam.
-									</div>
-								</div>
-							</div>
-							<!-- /.panel-default -->
-						</div>
-						<!--end of /.panel-group-->
-					</div>
-					<!--end of /.col-sm-6-->
-					<div class="col-sm-6 accordionTwo">
-						<div class="panel-group" id="accordionTwoRight">
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									<h4 class="panel-title">
-										<a class="collapsed" data-toggle="collapse" data-parent="#accordionTwoRight"
-											href="#collapseTwoRightone" aria-expanded="false">
-											For what reason would it be advisable
-										</a>
-									</h4>
-								</div>
-								<div id="collapseTwoRightone" class="panel-collapse collapse" aria-expanded="false"
-									role="tablist">
-									<div class="panel-body">
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus hendrerit risus
-										nisl, nec facilisis ante iaculis fringilla. Integer mattis risus vel dapibus
-										rhoncus. Duis ut nulla et metus vehicula facilisis non eu quam.
-									</div>
-								</div>
-							</div>
-							<!-- /.panel-default -->
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									<h4 class="panel-title">
-										<a class="collapsed" data-toggle="collapse" data-parent="#accordionTwoRight"
-											href="#collapseTwoRightTwo" aria-expanded="false">
-											for me to think about business content?
-										</a>
-									</h4>
-								</div>
-								<div id="collapseTwoRightTwo" class="panel-collapse collapse" aria-expanded="false"
-									role="tablist">
-									<div class="panel-body">
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus hendrerit risus
-										nisl, nec facilisis ante iaculis fringilla. Integer mattis risus vel dapibus
-										rhoncus. Duis ut nulla et metus vehicula facilisis non eu quam.
-									</div>
-								</div>
-							</div>
-							<!-- /.panel-default -->
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									<h4 class="panel-title">
-										<a data-toggle="collapse" data-parent="#accordionTwoRight"
-											href="#collapseTwoRightThree" aria-expanded="false">
-											it be advisable
-										</a>
-									</h4>
-								</div>
-								<div id="collapseTwoRightThree" class="panel-collapse collapse in" aria-expanded="false"
-									role="tablist">
-									<div class="panel-body">
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus hendrerit risus
-										nisl, nec facilisis ante iaculis fringilla. Integer mattis risus vel dapibus
-										rhoncus. Duis ut nulla et metus vehicula facilisis non eu quam.
-									</div>
-								</div>
-							</div>
-							<!-- /.panel-default -->
-						</div>
-						<!--end of /.panel-group-->
-					</div>
-					<!--end of /.col-sm-6-->
-				</div>
-			</div>
-			<!--end of /.container-->
-		</section>
-	</div>
+	
 </body>
 
 </html>
