--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
           <li><a href="home.html" class="active">HOME</a></li>
           <li><a href="" class="active">TEMUKAN BARANG</a></li>
           <li><a href="about.html" class="active">TENTANG KAMI</a></li>
-          <li><a href="" class="active">HUBUNGI KAMI</a></li>
+          <li><a href="hubungi.html" class="active">HUBUNGI KAMI</a></li>
           <li><a href="login.html" class="masuk">MASUK</a></li>
           <li><a href="register.html" class="register">DAFTAR</a></li>
         </ul>
