--- a/help.html
+++ b/help.html
@@ -90,7 +90,7 @@
 	<link rel="stylesheet" href="assets/css/accordions.css">
 	<script src="components/accordions.js"></script>
 
-	<div id="accordion">
+	<div id="accordion" class="container" style="padding-left: 70px; padding-right: 70px;">
 		<div class="container-lg">
 			<div class="row">
 				<div class="col-lg-12">
