--- a/help.html
+++ b/help.html
@@ -108,7 +108,8 @@
 								data-parent="#accordionExample">
 								<div class="card-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem
 									tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper
-									malesuada ante. Vestibulum id metus ac nisl bibendum scelerisque non non purus. Suspendisse
+									malesuada ante. Vestibulum id metus ac nisl bibendum scelerisque non non purus.
+									Suspendisse
 									varius nibh non aliquet sagittis. In tincidunt orci sit amet elementum vestibulum.</div>
 							</div>
 						</div>
@@ -121,9 +122,11 @@
 										Bootstrap?</a>
 								</h2>
 							</div>
-							<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+							<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+								data-parent="#accordionExample">
 								<div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus
-									terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch.
+									terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
+									brunch.
 									Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
 									bird on it squid single-origin coffee nulla assumenda shoreditch et.</div>
 							</div>
@@ -141,7 +144,8 @@
 								data-parent="#accordionExample">
 								<div class="card-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem
 									tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper
-									malesuada ante. Vestibulum id metus ac nisl bibendum scelerisque non non purus. Suspendisse
+									malesuada ante. Vestibulum id metus ac nisl bibendum scelerisque non non purus.
+									Suspendisse
 									varius nibh non aliquet sagittis. In tincidunt orci sit amet elementum vestibulum.</div>
 							</div>
 						</div>
@@ -157,7 +161,8 @@
 							<div id="collapseFour" class="collapse" aria-labelledby="headingFour"
 								data-parent="#accordionExample">
 								<div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus
-									terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch.
+									terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
+									brunch.
 									Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
 									bird on it squid single-origin coffee nulla assumenda shoreditch et.</div>
 							</div>
@@ -167,7 +172,6 @@
 			</div>
 		</div>
 	</div>
-
 </body>
 
 </html>
