--- a/help.html
+++ b/help.html
@@ -31,8 +31,8 @@
 			<nav class="nav-bar">
 				<ul>
 					<li><a href="home.html" class="active">HOME</a></li>
-					<li><a href="" class="active">TEMUKAN BARANG</a></li>
-					<li><a href="about.html" class="active">TENTANG KAMI</a></li>
+					<li><a href="#" class="active">TEMUKAN BARANG</a></li>
+					<li><a href="help.html" class="active">BANTUAN</a></li>
 					<li><a href="hubungi.html" class="active">HUBUNGI KAMI</a></li>
 					<li><a href="login.html" class="masuk">MASUK</a></li>
 					<li><a href="register.html" class="register">DAFTAR</a></li>
@@ -45,7 +45,7 @@
 
 	<!-- Main Conten -->
 	<div class="color-carousel">
-		<div class="container">
+		<div class="container mb-2">
 			<div class="row">
 				<div class="col-sm-12 text-mckup">
 					<div class="mt-8">
@@ -54,7 +54,7 @@
 
 					<!-- Quick Help -->
 					<div class="mt-5 container">
-						<div class="row container mt-4 mb-5" style="align-self: center;">
+						<div class="row container mt-4 mb-6" style="align-self: center;">
 							<div class="col-sm-4 container mt-4">
 								<a href="#" style="text-decoration: none;">
 									<img src="assets/img/about/faq.png" alt="" width="300px" class="mx-auto d-block">
