--- a/help.html
+++ b/help.html
@@ -13,7 +13,7 @@
 	<link href="assets/css/globalstyle.css" rel="stylesheet" type="text/css" />
 	<link href="assets/css/home.css" rel="stylesheet" type="text/css" />
 	<script src="components/bootstrap.bundle.js"></script>
-	<title>About | LOSTANDFOUND</title>
+	<title>Bantuan | LOSTANDFOUND</title>
 </head>
 
 <body>
