--- a/hubungi.html
+++ b/hubungi.html
@@ -23,7 +23,7 @@
     <link href="assets/css/globalstyle.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/hubungi.css" rel="stylesheet" type="text/css" />
     <script src="components/bootstrap.bundle.js"></script>
-    <title>Home | Lost&Found</title>
+    <title>Hubungi | Lost&Found</title>
   </head>
 
   <body>
@@ -106,7 +106,7 @@
         <div class="modal-content">
           <!-- Modal Header -->
           <div class="modal-header" style="border: none">
-            <h4 class="modal-title">Modal Heading</h4>
+            <h4 class="modal-title">Hubungi Kami</h4>
             <button
               type="button"
               class="btn-close"
