--- a/help.html
+++ b/help.html
@@ -46,7 +46,7 @@
 
 	<!-- Main Conten -->
 	<div class="color-carousel">
-		<div class="section-mt">
+		<div class="container section-mt">
 			<div class="row">
 				<div class="col-sm-12 text-mckup">
 					<div class="mt-5 mb-2">
@@ -97,7 +97,7 @@
 
 	<div class="mt-4 mb-2">
 		<div id="accordion" class="container" style="padding-left: 70px; padding-right: 70px;">
-			<div class="container-lg mb-5">
+			<div class="container mb-5">
 				<div class="row">
 					<div class="col-lg-10">
 						<h1 class="page-title">Bantuan <span class="head-color">Lost&Found</span></h1>
@@ -205,11 +205,6 @@
 			</div>
 		</div>
 	</div>
-
-
-	
-
-
 	<!--FOOTER-->
 	<footer class="container-footer">
 		<div class="page-one">
