--- a/help.html
+++ b/help.html
@@ -101,17 +101,38 @@
 					<div class="col-lg-10">
 						<h1 class="page-title">Bantuan <span class="head-color">Lost&Found</span></h1>
 						<div class="accordion" id="accordionExample">
+							<!-- First -->
 							<div class="card">
 								<div class="card-header" id="headingOne">
 									<h2 class="clearfix mb-0">
 										<a class="btn btn-link" data-toggle="collapse" data-target="#collapseOne"
 											aria-expanded="true" aria-controls="collapseOne">
 											<i class="fa fa-chevron-circle-down"></i>
-											Sulitkah menggunakan Lost&Found?
+											Apasih itu Lost&Found?
 										</a>
 									</h2>
 								</div>
 								<div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
+									data-parent="#accordionExample">
+									<div class="card-body">
+										Lost&Found merupakan sebuah platform yang memberikan layanan dalam membantu orang-orang yang
+										mengalami kehilangan barang. Lost&Found akan membantu dalam menemukan barang yang hilang dengan
+										lebih cepat karena telah terkoneksi dengan berabagai sosial media seperti Instagram dan Twitter.
+									</div>
+								</div>
+							</div>
+							<!-- Second -->
+							<div class="card">
+								<div class="card-header" id="headingTwo">
+									<h2 class="clearfix mb-0">
+										<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
+											aria-expanded="false" aria-controls="collapseTwo">
+											<i class="fa fa-chevron-circle-down"></i>
+											Sulitkah menggunakan Lost&Found?
+										</a>
+									</h2>
+								</div>
+								<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 									data-parent="#accordionExample">
 									<div class="card-body">
 										Lost&Found merupakan sebuah platform yang user friendly sehingga akan sangat mudah digunakan
@@ -120,18 +141,19 @@
 									</div>
 								</div>
 							</div>
+							<!-- Third -->
 							<div class="card">
-								<div class="card-header" id="headingTwo">
-									<h2 class="mb-0">
+								<div class="card-header" id="headingThree">
+									<h2 class="clearfix mb-0">
 										<a class="btn btn-link collapsed" data-toggle="collapse"
-											data-target="#collapseTwo" aria-expanded="false"
-											aria-controls="collapseTwo">
+											data-target="#collapseThree" aria-expanded="false"
+											aria-controls="collapseThree">
 											<i class="fa fa-chevron-circle-down"></i>
 											Bagaimana cara melaporkan barang yang hilang?
 										</a>
 									</h2>
 								</div>
-								<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+								<div id="collapseThree" class="collapse" aria-labelledby="headingThree"
 									data-parent="#accordionExample">
 									<div class="card-body">
 										Untuk melaporakan barang yang hilang, Anda dapat
@@ -146,18 +168,19 @@
 									</div>
 								</div>
 							</div>
+							<!-- Fourth -->
 							<div class="card">
-								<div class="card-header" id="headingThree">
+								<div class="card-header" id="headingFour">
 									<h2 class="mb-0">
 										<a class="btn btn-link collapsed" data-toggle="collapse"
-											data-target="#collapseThree" aria-expanded="false"
-											aria-controls="collapseThree">
+											data-target="#collapseFour" aria-expanded="false"
+											aria-controls="collapseFour">
 											<i class="fa fa-chevron-circle-down"></i>
 											Jika Anda menemukan barang?
 										</a>
 									</h2>
 								</div>
-								<div id="collapseThree" class="collapse" aria-labelledby="headingThree"
+								<div id="collapseFour" class="collapse" aria-labelledby="headingFour"
 									data-parent="#accordionExample">
 									<div class="card-body">
 										Jika Anda menemukan barang, Anda dapat melaporkan barang tersebut pada halaman
@@ -170,18 +193,19 @@
 									</div>
 								</div>
 							</div>
+							<!-- Fiveth -->
 							<div class="card">
-								<div class="card-header" id="headingFour">
+								<div class="card-header" id="headingFive">
 									<h2 class="mb-0">
 										<a class="btn btn-link collapsed" data-toggle="collapse"
-											data-target="#collapseFour" aria-expanded="false"
-											aria-controls="collapseFour">
+											data-target="#collapseFive" aria-expanded="false"
+											aria-controls="collapseFive">
 											<i class="fa fa-chevron-circle-down"></i>
 											Apakah Lost&Found aman?
 										</a>
 									</h2>
 								</div>
-								<div id="collapseFour" class="collapse" aria-labelledby="headingFour"
+								<div id="collapseFive" class="collapse" aria-labelledby="headingFive"
 									data-parent="#accordionExample">
 									<div class="card-body">
 										Kami bekerja sama dengan beberapa pihak, seperti pemerintah setempat, Indomaret, kepolisian dan pihak yang berwenang lainnya.
