--- a/tentang.html
+++ b/tentang.html
@@ -21,7 +21,8 @@
       type="text/css"
     />
     <link href="assets/css/globalstyle.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/hubungi.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/home.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/tentang.css" rel="stylesheet" type="text/css" />
     <script src="components/bootstrap.bundle.js"></script>
     <title>Tentang | Lost&Found</title>
   </head>
@@ -41,13 +42,13 @@
       </div>
       <nav class="nav-bar">
         <ul>
-            <li><a href="home.html" class="active">HOME</a></li>
-            <li><a href="#" class="active">TEMUKAN BARANG</a></li>
-            <li><a href="help.html" class="active">BANTUAN</a></li>
-            <li><a href="tentang.html" class="active">TENTANG KAMI</a></li>
-            <li><a href="hubungi.html" class="active">HUBUNGI KAMI</a></li>
-            <li><a href="login.html" class="masuk">MASUK</a></li>
-            <li><a href="register.html" class="register">DAFTAR</a></li>
+          <li><a href="home.html" class="active">HOME</a></li>
+          <li><a href="#" class="active">TEMUKAN BARANG</a></li>
+          <li><a href="help.html" class="active">BANTUAN</a></li>
+          <li><a href="tentang.html" class="active">TENTANG KAMI</a></li>
+          <li><a href="hubungi.html" class="active">HUBUNGI KAMI</a></li>
+          <li><a href="login.html" class="masuk">MASUK</a></li>
+          <li><a href="register.html" class="register">DAFTAR</a></li>
         </ul>
       </nav>
     </header>
@@ -55,6 +56,140 @@
     <script src="components/navbar-sticky.js"></script>
     <!--Container-->
     <div class="color-carousel">
-        <!--CONTAINER ke 1-->
-        
+      <!--CONTAINER ke 1-->
+      <div class="container section section-mt">
+        <div class="mt-5 mb-2">
+          <div class="row">
+            <div class="col-sm-6">
+              <h1 class="header-h1">Menemukan barang lebih mudah bersama kami</h1>
+              <p class="paraf-head">
+                Berkenalan lebih dekat bersama kami, berbuat kebaikan bersama, menjalin koneksi dari barang hilang, dimanapun kapanpun tanpa batasan.
+              </p>
+            </div>
+            <div class="col-sm-6">
+              <img
+                src="assets/img/about.png"
+                class="img-class"
+                alt="about"
+              />
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
+    <!--CONTAINER ke 2-->
+    <div class="container container-m">
+        <div class="row">
+          <div class="col-md-5">
+            <img src="assets/img/loving.png" class="img-cont2" alt="contoh" />
+          </div>
+          <div class="col-md-7 mt-6" style="font-weight:500; font-size: 18px;">
+            <p class="paraf">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime odit, molestias numquam modi quis accusantium aut quo quisquam nobis nisi commodi consectetur a, similique esse delectus quas eaque excepturi fuga?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed minima assumenda eos libero dicta dolore, quasi aliquid blanditiis ea eligendi iste suscipit illo natus cumque dolores facilis totam unde praesentium.
+                <br/>
+                <br/>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quas aperiam, pariatur temporibus ullam nostrum? Ipsum libero provident quasi possimus unde, deleniti cupiditate blanditiis, dolorem quae laudantium veritatis perspiciatis rerum.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet culpa facilis accusantium ad fugiat dolores, autem eum doloremque molestiae. Itaque molestiae, vero distinctio culpa beatae nostrum aperiam nemo autem id.
+                <br/>
+                <br/>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae deserunt eius, quasi cum sequi tenetur, vero temporibus facere soluta quam veritatis placeat blanditiis exercitationem adipisci non earum voluptatem labore qui!
+            </p>
+          </div>
+        </div>
+      </div>
+      <!---CONTAINER ke 3-->
+      <div class="d-block container-m "style="background-color: #fafafa">
+        <div class="container">
+          <h1 class="title text-center" style="font-weight: 900; font-size:48px;">
+            Nilai-Nilai
+          </h1>
+          <div class="row row-cont">
+            <div class="col-md-6 col-xl-7 mr-mar">
+                <div class="media-body">
+                    <h6><i class="bi bi-three-dots-vertical"></i>Kindness<i class="bi bi-three-dots-vertical"></i></h6>
+                    <hr/>
+                    <p style="font-weight: 500; font-size: 20px;">Melakukan Kebaikan untuk orang-orang yang kesulitan</p>
+                </div>
+            </div>
+            <div class="col-md-6 col-xl-7 ml-mar mt-6">
+                <div class="media-body">
+                    <h6><i class="bi bi-three-dots-vertical"></i>Trust responsibility<i class="bi bi-three-dots-vertical"></i></h6>
+                    <hr/>
+                    <p style="font-weight: 500; font-size: 20px;">Tanggung jawab penuh dalam membantu anda, dan menjaga barang anda</p>
+                </div>
+            </div>
+            <div class="col-md-6 col-xl-7 mr-mar mt-6">
+                <div class="media-body">
+                    <h6><i class="bi bi-three-dots-vertical"></i>Simplicity<i class="bi bi-three-dots-vertical"></i></h6>
+                    <hr/>
+                    <p style="font-weight: 500; font-size: 20px;">Kemudahan untuk melakukan kebaikan, dan menemukan barang anda</p>
+                </div>
+            </div>
+            <div class="col-md-6 col-xl-7 ml-mar mt-6">
+                <div class="media-body">
+                    <h6><i class="bi bi-three-dots-vertical"></i>Fidelity<i class="bi bi-three-dots-vertical"></i></h6>
+                    <hr/>
+                    <p style="font-weight: 500; font-size: 20px;">Menemukan lalu menitipkan pada Lost&Found, akan tepat kembali pada pemiliknya</p>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--CONTAINER ke 4 -->
+      <div class="d-block container-m">
+        <div class="container">
+          <h2 class="title text-center title-m">
+            Peran Kami
+          </h2>
+          <div class="row roww-m">
+            <div class="col-sm-6">
+              <img src="assets/img/p2.png" class="row-img" alt="security" />
+              <p class="desc-name">Zaedil Febriansyah</p>
+              <p class="desc-paraf">
+                Design web,COO                   
+              </p>
+            </div>
+            <div class="col-sm-6">
+              <img src="assets/img/p1.png" class="row-img" alt="security" />
+              <p class="desc-name">Azwar Meizia Kusumah</p>
+              <p class="desc-paraf">
+                Design web,CEO
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--FOOTER-->
+      <footer class="container-footer">
+        <div class="page-one">
+          <div class="box">
+            <figure>
+              <a href="#">
+                <img src="assets/img/footer-logo.png" alt="Lost and found">
+              </a>
+            </figure>
+          </div>
+          <div class="box">
+            <div class="box-center">
+              <a class="">Temukan Barang</a>
+              <a class="">Tentang kami</a>
+              <a class="">Hubungi kami</a>
+            </div>
+          </div>
+          <div class="box">
+            <h2>Ikuti Kami</h2>
+            <div class="social-media">
+              <i class="bi bi-facebook"></i>
+              <i class="bi bi-instagram"></i>
+              <i class="bi bi-twitter"></i>
+              <i class="bi bi-youtube"></i>
+            </div>
+          </div>
+        </div>
+        <div class="page-two">
+          <small>&copy; 2022 <b>LOST AND FOUND</b> - PT. Kerja Kelompok Sukses</small>
+        </div>
+      </footer>
+  </body>
+</html>
