--- a/hubungi.html
+++ b/hubungi.html
@@ -42,7 +42,7 @@
       <nav class="nav-bar">
         <ul>
           <li><a href="home.html" class="active">HOME</a></li>
-          <li><a href="temukan_barang.html" class="active">TEMUKAN BARANG</a></li>
+          <li><a href="temukan-barang.html" class="active">TEMUKAN BARANG</a></li>
           <li><a href="help.html" class="active">BANTUAN</a></li>
           <li><a href="tentang.html" class="active">TENTANG KAMI</a></li>
           <li><a href="hubungi.html" class="active">HUBUNGI KAMI</a></li>
