--- a/temukan-barang.html
+++ b/temukan-barang.html
@@ -30,7 +30,7 @@
         <nav class="nav-bar">
             <ul>
                 <li><a href="home.html" class="active">HOME</a></li>
-                <li><a href="#" class="active">TEMUKAN BARANG</a></li>
+                <li><a href="temukan-barang.html" class="active">TEMUKAN BARANG</a></li>
                 <li><a href="help.html" class="active">BANTUAN</a></li>
                 <li><a href="tentang.html" class="active">TENTANG KAMI</a></li>
                 <li><a href="hubungi.html" class="active">HUBUNGI KAMI</a></li>
@@ -59,7 +59,7 @@
 									<img src="assets/img/lost.png" alt="LOST" width="400px" style="float: right;">
 									<h2 class="mt-1 head-color" style="font-weight: 900; text-align: center;">LOST</h2>
 								</a>
-                                <p style="text-align: center;">Laporkan barang Anda yang hilang!</p>
+                                <p style="text-align: center;">Temukan barang Anda yang hilang!</p>
 							</div>
 							<div class="col-sm-4 container mt-1">
 								<a href="#" style="text-decoration: none;">
