--- a/kehilangan.html
+++ b/kehilangan.html
@@ -13,6 +13,7 @@
     <link href="assets/css/home.css" rel="stylesheet" type="text/css" />
     <script src="components/bootstrap.bundle.js"></script>
     <link rel="stylesheet" href="./assets/css/temukan.css" />
+    <title>LOST</title>
   </head>
   <body>
     <header>
