--- a/home.html
+++ b/home.html
@@ -17,7 +17,30 @@
 </head>
 
 <body>
-  
+  <!--NAVBAR-->
+  <header>
+    <div class="logo">
+      <a href="home.html"><img src="assets/img/lostlogo.png" class="logo" alt="logo" /></a>
+    </div>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </div>
+    <nav class="nav-bar">
+      <ul>
+        <li><a href="home.html" class="active">HOME</a></li>
+        <li><a href="temukan-barang.html" class="active">TEMUKAN BARANG</a></li>
+        <li><a href="help.html" class="active">BANTUAN</a></li>
+        <li><a href="tentang.html" class="active">TENTANG KAMI</a></li>
+        <li><a href="hubungi.html" class="active">HUBUNGI KAMI</a></li>
+        <li><a href="login.html" class="masuk">MASUK</a></li>
+        <li><a href="register.html" class="register">DAFTAR</a></li>
+      </ul>
+    </nav>
+  </header>
+  <script src="components/navbar.js"></script>
+  <script src="components/navbar-sticky.js"></script>
 
   <!--MAIN CONTAINER-->
   <div class="color-carousel">
