--- a/menemukan.html
+++ b/menemukan.html
@@ -51,6 +51,11 @@
 					<div class="mt-5 mb-2">
 						<h1 class="mt-5" style="font-weight: 900; text-align: center; color: #7004d4;">MENEMUKAN <span class="head-color">BARANG</span></h1>
 					</div>
+
+                    <!-- Form -->
+                    <div>
+                        
+                    </div>
                 </div>
             </div>
         </div>
